# maksar.github.io

./: .env  .envrc  .gitignore  Main.hs  Site.hs  about.markdown  blog.cabal  cabal.project  flake.nix  index.html
.bin/: haskell-language-server  hlint
css/: default.css  default.sass
docs/: about.html  contact.html  index.html  rss.xml
docs/about/: index.html
docs/categories/: WAT.html  code.html  projects.html
docs/css/: default.css
docs/languages/: english.html  russian.html
docs/posts/: 2015-08-12-spqr.html  2015-10-07-rosa-rosa-rosam.html  2015-11-28-carpe-diem.html  2015-12-07-tu-quoque.html  2021-03-17-gitman.html
docs/series/: ldap-bot.html
docs/tags/: AD.html  JIRA.html  LDAP.html  NIX.html  Office 365.html  QuickCheck.html  aeson.html  code-review.html  docker.html  elm.html  english.html  fibers.html  git.html  haskell.html  konfig.html  kotlin.html  ldap.html  lens.html  nix.html  nixops.html  polysemy.html  rspec.html  ruby.html  russian.html  servant.html  tdd.html  teamcity.html  telegram.html
posts/: 2015-08-12-spqr.markdown  2015-10-07-rosa-rosa-rosam.markdown  2015-11-28-carpe-diem.markdown  2021-03-17-gitman.markdown
posts/WAT/: 2018-07-07.markdown  2018-08-04.markdown  2018-08-05.markdown  2018-08-11.markdown  2018-08-18.markdown  2018-08-20.markdown  2018-08-27.markdown  2018-09-02.markdown  2018-09-15.markdown  (+48 more)
src/: Categories.hs  Config.hs  Feed.hs  Html.hs  Languages.hs  Main.hs  Series.hs  Static.hs  Tags.hs
temp/: 2017-06-12-ruby.markdown  safet.markdown  sec
templates/: default.html  post-list.html  post.html
(+262 files in other folders)
