cabal-version: 2.0
name:          blog
version:       0.1.0.0
build-type:    Simple

executable blog
  main-is:            Main.hs
  build-depends:
      base
    , blaze-html
    , containers
    , hakyll
    , hakyll-images
    , hakyll-sass
    , hakyll-shortcut-links

  ghc-options:        -threaded
  default-extensions:
    OverloadedStrings
    StandaloneDeriving

  default-language:   Haskell2010
