cabal-version: 2.0
name:          blog
version:       0.1.0.0
build-type:    Simple

executable blog
  main-is:            Main.hs
  build-depends:
      base
    , blaze-html
    , containers
    , extra
    , hakyll
    , hakyll-favicon
    , hakyll-images
    , hakyll-sass
    , hakyll-shortcut-links

  other-modules:
    Categories
    Config
    Feed
    Html
    Languages
    Series
    Static
    Tags

  hs-source-dirs:     src
  default-extensions:
    LambdaCase
    OverloadedStrings
    StandaloneDeriving

  default-language:   Haskell2010
